--- a/ft_printf_without_bonus/Makefile
+++ b/ft_printf_without_bonus/Makefile
@@ -6,19 +6,19 @@
 #    By: shaas <shaas@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/20 20:52:56 by shaas             #+#    #+#              #
-#    Updated: 2021/08/24 20:23:32 by shaas            ###   ########.fr        #
+#    Updated: 2021/08/21 15:41:01 by shaas            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 
-COMP = gcc -Wall -Wextra -Werror #-c
+COMP = gcc -c -Wall -Wextra -Werror
 
 C_FILES = ft_printf.c ft_print_percent_sign.c ft_print_character.c ft_print_string.c \
 ft_print_integer.c ft_print_decimal.c ft_print_unsigned.c \
 ft_print_hexa_lower.c ft_print_hexa_upper.c ft_print_pointer.c ft_print_wtf.c \
 ft_actually_print_character.c ft_actually_print_string.c ft_actually_print_integer.c \
-ft_hexa_helpers.c ft_atoi.c
+ft_hexa_helpers.c
 
 O_FILES = $(C_FILES:.c=.o)
 
