--- a/ft_printf_width_precision/Makefile
+++ b/ft_printf_width_precision/Makefile
@@ -6,19 +6,19 @@
 #    By: shaas <shaas@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/20 20:52:56 by shaas             #+#    #+#              #
-#    Updated: 2021/08/25 18:45:32 by shaas            ###   ########.fr        #
+#    Updated: 2021/08/24 20:23:32 by shaas            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 
-COMP = gcc #-c -Wall -Wextra -Werror
+COMP = gcc -Wall -Wextra -Werror #-c
 
-C_FILES = ft_printf.c ft_flags.c ft_print_percent_sign.c ft_print_character.c \
-ft_print_string.c ft_print_integer.c  ft_print_wtf.c \
+C_FILES = ft_printf.c ft_print_percent_sign.c ft_print_character.c ft_print_string.c \
+ft_print_integer.c ft_print_decimal.c ft_print_unsigned.c \
+ft_print_hexa_lower.c ft_print_hexa_upper.c ft_print_pointer.c ft_print_wtf.c \
 ft_actually_print_character.c ft_actually_print_string.c ft_actually_print_integer.c \
-ft_hexa_helpers.c ft_atoi.c ft_print_decimal.c ft_print_unsigned.c \
-ft_print_hexa_lower.c ft_print_hexa_upper.c ft_print_pointer.c
+ft_hexa_helpers.c ft_atoi.c
 
 O_FILES = $(C_FILES:.c=.o)
 
@@ -37,5 +37,3 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
-
-bonus: all
